--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,12 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="text">#231b42</color>
+    <color name="back">#e6e1cd</color>
+    <color name="green">#c6d8c0</color>
+    <color name="greenD">#657564</color>
+    <color name="salmon">#d6b3b1</color>
+    <color name="bocchi">#f97992</color>
+
 </resources>
