--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,6 @@
     <color name="green">#c6d8c0</color>
     <color name="greenD">#657564</color>
     <color name="salmon">#d6b3b1</color>
-    <color name="bocchi">#f97992</color>
+    <color name="bocchi">#CF8392</color>
 
 </resources>
