--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,39 +7,55 @@
     android:background="@color/salmon"
     tools:context=".MainActivity">
 
-    <TextView
-
-        android:id="@+id/textView"
-        style="@style/textview"
-        android:layout_width="241dp"
-        android:layout_height="56dp"
-        android:layout_marginBottom="96dp"
-        android:text="RecyclerView"
-        app:layout_constraintBottom_toTopOf="@+id/RVall"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.094"
-        app:layout_constraintStart_toStartOf="parent" />
-
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/RVall"
-        android:layout_width="343dp"
-        android:layout_height="411dp"
-        android:layout_marginBottom="60dp"
+        android:layout_width="362dp"
+        android:layout_height="635dp"
+        android:layout_marginBottom="56dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent" />
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
-        android:layout_width="413dp"
-        android:layout_height="75dp"
+        android:layout_width="364dp"
+        android:layout_height="53dp"
         android:background="?attr/colorPrimary"
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme"
         app:layout_constraintBottom_toTopOf="@+id/textView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
+
+    <TextView
+        android:id="@+id/textView"
+        style="@style/Titles"
+        android:layout_width="164dp"
+        android:layout_height="35dp"
+
+        android:text="Current Tasks:"
+
+        app:layout_constraintBottom_toTopOf="@+id/RVall"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageButton
+        android:id="@+id/imageButton"
+        android:layout_width="92dp"
+        android:layout_height="92dp"
+        android:layout_marginBottom="16dp"
+        android:adjustViewBounds="false"
+        android:backgroundTint="@color/cardview_shadow_end_color"
+        android:scaleType="centerCrop"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.94"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
+        app:layout_constraintVertical_bias="1.0"
+        app:srcCompat="@drawable/plusmas" />
 </androidx.constraintlayout.widget.ConstraintLayout>
