--- a/app/src/main/res/values/Styles.xml
+++ b/app/src/main/res/values/Styles.xml
@@ -8,7 +8,14 @@
     <item name="android:textSize">50px</item>
 </style>
 
+<style name="Titles">
+    <item name="android:textColor">@color/text</item>
+    <item name="android:textAlignment">center</item>
+    <item name="android:textStyle">bold</item>
+    <item name="android:textSize">20dp</item>
 
+
+</style>
 
 
 
