--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,12 +9,11 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/RVall"
-        android:layout_width="362dp"
-        android:layout_height="635dp"
-        android:layout_marginBottom="56dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="358dp"
+        android:layout_height="585dp"
+        app:layout_constraintBottom_toTopOf="@+id/removeButton"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
 
     <androidx.appcompat.widget.Toolbar
@@ -58,4 +57,15 @@
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
         app:layout_constraintVertical_bias="1.0"
         app:srcCompat="@drawable/plusmas" />
+
+    <Button
+        android:id="@+id/removeButton"
+        android:layout_width="211dp"
+        android:layout_height="47dp"
+        android:layout_marginBottom="16dp"
+        android:text="Remover ultima tarea"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/imageButton"
+        app:layout_constraintHorizontal_bias="0.39"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
