--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="18sp"
-        android:textColor ="@android:color/black"
+        android:textColor ="@color/white"
         android:text="Titulo del elemento"
         ></TextView>
 
