--- a/app/src/main/res/layout/recycler_item.xml
+++ b/app/src/main/res/layout/recycler_item.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="18sp"
-        android:textColor ="@android:color/black"
+        android:textColor ="@android:color/white"
         android:text="Titulo del elemento"
         ></TextView>
 
@@ -22,7 +22,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="14sp"
-        android:textColor ="@android:color/darker_gray"
+        android:textColor ="@color/white"
         android:text="Titulo del elemento"
         ></TextView>
 
