--- a/app/src/main/res/values/Styles.xml
+++ b/app/src/main/res/values/Styles.xml
@@ -9,7 +9,7 @@
 </style>
 
 <style name="Titles">
-    <item name="android:textColor">@color/text</item>
+    <item name="android:textColor">@color/white</item>
     <item name="android:textAlignment">center</item>
     <item name="android:textStyle">bold</item>
     <item name="android:textSize">20dp</item>
